--- a/app/src/main/res/layout/activity_detalhe_cliente.xml
+++ b/app/src/main/res/layout/activity_detalhe_cliente.xml
@@ -8,14 +8,13 @@
 
     <TextView
         android:id="@+id/tvUsuario"
-        android:layout_width="71dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginLeft="27dp"
-        android:layout_marginRight="31dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="9dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="7dp"
         android:text="Usuário"
         app:layout_constraintBottom_toTopOf="@+id/tvNomeUsuario"
         app:layout_constraintEnd_toStartOf="@+id/tvSituacao"
@@ -24,34 +23,31 @@
 
     <TextView
         android:id="@+id/tvNomeUsuario"
-        android:layout_width="329dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="397dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginLeft="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginStart="27dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="426dp"
         android:text="NomeUsuário"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvSituacao" />
+        app:layout_constraintEnd_toEndOf="@+id/tvSituacao"
+        app:layout_constraintStart_toStartOf="@+id/tvUsuario"
+        app:layout_constraintTop_toBottomOf="@+id/tvUsuario" />
 
     <ImageView
         android:id="@+id/ivFotoCliente"
         android:layout_width="185dp"
-        android:layout_height="125dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toTopOf="@+id/btAlterar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNomeUsuario"
+        app:layout_constraintTop_toBottomOf="@+id/tvSituacao"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <Button
         android:id="@+id/btAlterar"
         android:layout_width="171dp"
-        android:layout_height="45dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="178dp"
         android:text="Alterar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,13 +58,13 @@
     <TextView
         android:id="@+id/tvSituacao"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
-        android:layout_marginTop="9dp"
+        android:layout_height="36dp"
+        android:layout_marginBottom="75dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginRight="39dp"
+        android:layout_marginTop="7dp"
         android:text="Situação: usuário ativo"
-        app:layout_constraintBottom_toTopOf="@+id/tvNomeUsuario"
+        app:layout_constraintBottom_toTopOf="@+id/ivFotoCliente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvUsuario"
         app:layout_constraintTop_toTopOf="parent" />
