--- a/app/src/main/res/layout/item_produtos_adapter.xml
+++ b/app/src/main/res/layout/item_produtos_adapter.xml
@@ -69,6 +69,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.973"
                 app:srcCompat="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/tvPrecoProdutoAdapter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="140dp"
+                android:text="@string/preco_produto"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvEstoqueProdutoAdapter" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
