--- a/app/src/main/res/layout/activity_detalhe_cliente.xml
+++ b/app/src/main/res/layout/activity_detalhe_cliente.xml
@@ -49,7 +49,7 @@
         android:layout_width="171dp"
         android:layout_height="0dp"
         android:layout_marginBottom="178dp"
-        android:text="Alterar"
+        android:text="Selecionar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
