--- a/app/src/main/res/layout/activity_detalhe_cliente.xml
+++ b/app/src/main/res/layout/activity_detalhe_cliente.xml
@@ -35,8 +35,8 @@
 
     <ImageView
         android:id="@+id/ivFotoCliente"
-        android:layout_width="185dp"
-        android:layout_height="0dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginBottom="60dp"
         app:layout_constraintBottom_toTopOf="@+id/btAlterar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
     <Button
         android:id="@+id/btAlterar"
         android:layout_width="171dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="178dp"
         android:text="Selecionar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +63,7 @@
         android:layout_marginEnd="39dp"
         android:layout_marginRight="39dp"
         android:layout_marginTop="7dp"
-        android:text="Situação: usuário ativo"
+        android:text="@string/situacao_usuario_ativo"
         app:layout_constraintBottom_toTopOf="@+id/ivFotoCliente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvUsuario"
