--- a/app/src/main/res/layout/activity_detalhe_cliente.xml
+++ b/app/src/main/res/layout/activity_detalhe_cliente.xml
@@ -67,5 +67,6 @@
         app:layout_constraintBottom_toTopOf="@+id/ivFotoCliente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvUsuario"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6" />
 </android.support.constraint.ConstraintLayout>
