--- a/app/src/main/res/layout/item_clientes_adapter.xml
+++ b/app/src/main/res/layout/item_clientes_adapter.xml
@@ -54,15 +54,16 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginEnd="68dp"
-                android:layout_marginLeft="34dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="68dp"
-                android:layout_marginStart="34dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/textView2"
                 app:layout_constraintHorizontal_bias="0.119"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.07999998"
                 app:srcCompat="@drawable/cliente_icon_524x524" />
 
             <TextView
